daemon/macros/tests/ui/not_struct.rs
use ozmux_macros::NewType;

#[derive(NewType)]
enum NotAStruct {
    A,
    B,
}

fn main() {}
